--- a/styles/style.css
+++ b/styles/style.css
@@ -6,130 +6,153 @@
   border: 0;
 }
 
-.container {
-  font-size: 0;
-  box-sizing: border-box;
-  max-width: 1920px;
-  width: 100%;
-  border: 1px solid red;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
 
-.iner-container {
-  border: 1px solid red;
+/*container*/
+.container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1920px;
+}
+
+.intro {
+  padding-top: 5%;
+  width: 100%;
   height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(232, 129, 130, 0.9), rgba(241, 217, 138, 0.9)), url("../img/Layer 15.jpg");
+  background-image: linear-gradient(to bottom, rgba(232, 129, 130, 0.9), rgba(241, 217, 138, 0.9)), url("/img/Layer 15.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-.logo {
-  width: 50%;
-  display: inline-block;
-}
-.logo a {
-  color: #fff;
-  margin-left: 50%;
-  font: 30px "Montserrat", "bold";
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.navbar {
-  width: 50%;
-  display: inline-block;
-}
-
-ul, li {
-  margin-right: 54px;
-  font-size: 14px;
-  text-align: left;
-  font-family: "Montserrat";
-  font-weight: bold;
-  display: inline-block;
-}
-ul a, li a {
-  color: #fdf7f7;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-}
-
-.carousel-inner {
-  width: 40%;
-  border: 1px solid green;
+.intro .intro-inner {
+  width: 100%;
+  max-width: 880px;
   margin: 0 auto;
-  margin-top: 70px;
-}
-.carousel-inner .item h1, .carousel-inner .item h2 {
   text-align: center;
 }
-
-.carousel-container {
-  border: 1px solid green;
-  width: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
-}
-.carousel-container .carousel-inner {
-  width: 80%;
-}
-.carousel-container .carousel-inner .item span h1 {
-  font-family: "Kaushan Script", cursive;
+.intro .intro-inner .intro-subtitle {
+  margin-bottom: 20px;
+  font-family: "Kaushan", cursive;
   font-size: 72px;
   color: #fff;
+  text-align: center;
 }
-.carousel-container .carousel-inner .item h2 {
-  font-family: "Montserrat", sans-serif;
+.intro .intro-inner .intro-title {
+  color: #fff;
   font-size: 150px;
-  color: #fff;
-}
-.carousel-container .carousel-inner .item a {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  color: #fff;
-}
-.carousel-container .carousel-inner .item .line1 {
-  width: 100%;
-  margin-top: 50px;
-}
-.carousel-container .carousel-inner .item .line-line {
+  font-weight: bold;
   text-align: center;
+  line-height: 1;
 }
-.carousel-container .carousel-inner .item .button-container {
-  width: 100%;
-  margin-top: 40px;
+.intro .intro-inner .intro-title .intro-title::after {
+  content: "";
   display: block;
-  margin-bottom: 50px;
-}
-.carousel-container .carousel-inner .item .button-container .button {
-  text-align: center;
-  text-decoration: none;
-  margin: 0 auto;
-}
-.carousel-container .carousel-inner .item .button-container .button a {
-  text-decoration: none;
-  color: #fff;
-  border: 2px solid #fff;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  padding: 10px 20px;
+  width: 60px;
+  height: 3px;
+  margin: 40px auto;
+  background-color: #fff;
 }
 
-.slide-indicators {
-  width: 90%;
-  margin: 0 auto;
-  border: 1px solid red;
-}
-.slide-indicators ol li {
-  width: 20%;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-  font-size: 20px;
+.btn {
+  display: inline-block;
+  vertical-align: top;
+  padding: 8px 30px;
+  border: 3px solid #fff;
+  font-size: 14px;
   color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.header {
+  width: 100%;
+  padding-top: 30px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.header-inner {
+  width: 100%;
   display: inline-block;
 }
-.slide-indicators main .container {
-  max-width: 1920px;
+.header-inner .header-logo {
+  text-align: center;
+  display: inline-block;
+  width: 50%;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  font-weight: bold;
+}
+
+/*nav*/
+.nav {
+  vertical-align: top;
+  display: inline-block;
+  width: 40%;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
+.nav .nav-link {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 15px;
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.2s linear;
+}
+.nav .nav-link:hover {
+  color: #fce38a;
+}
+.nav .nav-link:after {
+  content: "";
+  display: inline-block;
   width: 100%;
-  height: 100vh;
-  margin: 0 auto;
+  background-color: #fff;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+}
+
+.slider {
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+  margin-top: 30px;
+}
+.slider .slider-item {
+  display: inline-block;
+  width: 23%;
+  opacity: 0.7;
+  font-size: 18px;
+  color: #fff;
+  padding: 20px 0;
+  text-transform: uppercase;
+  border-top: 3px solid #fff;
+}
+.slider .slider-item.active {
+  opacity: 1;
+}
+.slider .slider-item.active::before {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 3px;
+  position: absolute;
+  top: 90.7%;
+  left: 3.3%;
+  z-index: 1;
+  background-color: #f38181;
+}
+.slider .slider-item.active::before .slider-number {
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
 }/*# sourceMappingURL=style.css.map */
