--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,13 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap');
-// $montserrat-bold: "Montserrat", 'bold' ;
-// $montserrat-regular: 'Montserrat', sans-serif;
-// $haushan-regular: 'Kaushan Script', cursive;
-// $roboto-regular: 'Roboto', sans-serif;
-// $roboto-light: "Roboto", 'light', 'Italic';
-// //*max-width*/
-// $max-width: 1920px;
-// // $line: width: 60px;
-
 
 * {
   box-sizing: border-box;
@@ -17,151 +8,183 @@
 }
 
 
-.container {
-  font-size: 0;
-  box-sizing: border-box;
-  max-width: 1920px;
-  width: 100%;
-  border: 1px solid red;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
-.iner-container {
-  border: 1px solid red;
+/*container*/
+.container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1920px;
+
+  
+}
+
+//*intro*//
+.intro {
+  padding-top: 5%;
+  width: 100%;
   height: 100vh;
   background-image:
     linear-gradient(to bottom,rgba(232, 129, 130, 0.90), rgba(241, 217, 138, 0.90)),
-    url('../img/Layer\ 15.jpg');
+    url('/img/Layer\ 15.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-}
 
-.logo {
-  width: 50%;
-  display: inline-block;
-
-  a {
-    
-    color: #fff;
-    margin-left: 50%;
-    font: 30px $montserrat-bold;
-    font-weight: bold;
-    text-decoration: none;
-  }
-}
-
-  .navbar {
-  width: 50%;
-  display: inline-block;
-  }
-
-  ul, li {
-  margin-right: 54px;
-  font-size: 14px;
-  text-align: left;
-  font-family: "Montserrat";
-  font-weight: bold;
-  display: inline-block;
-
-  a {
-    
-    color: #fdf7f7 ;
-    font-family: 'Montserrat', sans-serif,;
-    font-size: 14px;
-  }
-
-  }
-
- .carousel-inner {
-  width: 40%;
-  border: 1px solid green;
-  margin: 0 auto;
-  margin-top: 70px;
-  .item {
-
-    h1, h2 {
+    .intro-inner {
+      width: 100%;
+      max-width: 880px;
+      margin: 0 auto;
       text-align: center;
-    }
-  }
- }
 
-
- 
- .carousel-container {
-  border: 1px solid green;
-  width: 100%;
-  max-width: $max-width;
-  margin: 0 auto;
-
-  .carousel-inner {
-    width: 80%;
-
-    .item {
-
-     span {
-
-      h1 {
-        font-family: 'Kaushan Script', cursive;
+      .intro-subtitle {
+        margin-bottom: 20px;
+        font-family: 'Kaushan', cursive;
         font-size: 72px;
         color: #fff;
-      }
+        text-align: center;
         
       }
-
-      h2 {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 150px;
+      .intro-title {
         color: #fff;
+        font-size: 150px;
+        font-weight: bold;
+        text-align: center;
+        line-height: 1;
+
+        .intro-title::after {
+          content: '';
+          display: block;
+          width: 60px;
+          height: 3px;
+          margin: 40px auto ;
+          background-color: #fff;
+        }
       }
       
-      a {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 14px;
-        color: #fff;
-      }
-
-      .line1 {
-        width: 100%;
-        margin-top: 50px;
-      }
-
-      .line-line {
-       text-align: center;
-      }
-
-      .button-container {
-        width: 100%;
-        margin-top: 40px;
-        display: block;
-        margin-bottom: 50px;
-        
-        .button {
-        text-align: center;
-        text-decoration: none;
-        margin: 0 auto;
-
-        a {
-          text-decoration: none;
-          color: #fff;
-          border: 2px solid #fff;
-          font-family: 'Montserrat', sans-serif;
-          font-size: 14px;
-          padding: 10px 20px;
-        }
-        }
-      }
     }
-  }
-  
- }
+}
 
+//*btn*//
+.btn {
+  display: inline-block;
+  vertical-align: top;
+  padding: 8px 30px;
+  border: 3px solid #fff;
+  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+//*header*//
 
+.header {
+  width: 100%;
+  padding-top: 30px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000
 
-  ///*sekantis*/
- main {
-    .container1 {
-      max-width: 1920px;
-      width: 100%;
-      height: 100vh;
-      margin: 0 auto;
+} 
+
+.header-inner {
+  width: 100%;
+  display: inline-block;
+
+  .header-logo {
+    text-align: center;
+    display: inline-block;
+    
+    width: 50%;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    font-weight: bold;
   }
 }
- 
+
+
+/*nav*/
+.nav {
+  vertical-align: top;
+  display: inline-block;
+  width: 40%;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+
+  .nav-link {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 15px;
+    color: #fff;
+    text-decoration: none;
+    transition: color .2s linear;
+    
+    
+  }
+  .nav-link:hover {
+    color: #fce38a;
+  }
+  .nav-link:after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    
+    top: 100%;
+    left: 0;
+    z-index: 1;
+  }
+
+}
+
+//*slider*//
+.slider {
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+  margin-top: 30px;
+
+  .slider-item {
+    display: inline-block;
+    width: 23%;
+    opacity: 0.7;
+    font-size: 18px;
+    color: #fff;
+    padding: 20px 0;
+    text-transform: uppercase;
+    border-top: 3px solid #fff;
+  }
+  .slider-item.active {
+    opacity: 1;
+  }
+  .slider-item.active::before {
+    content: "";
+    display: block;
+    width: 70px;
+    height: 3px;
+    position: absolute;
+    top: 90.7%;
+    left: 3.3%;
+    z-index: 1;
+    background-color: #f38181;
+
+    .slider-number {
+      font-size: 24px;
+      font-family: "Montserrat", sans-serif;
+      color: #fff;
+    }
+  }
+}
+
+
+
+
+
+
+
