--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap");
+/*shrift*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,34 +7,28 @@
   border: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
+.container1 {
+  margin: 0 auto;
 }
 
 /*container*/
 .container {
-  width: 100%;
   margin: 0 auto;
-  max-width: 1920px;
 }
 
 .intro {
-  padding-top: 5%;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
   background-image: linear-gradient(to bottom, rgba(232, 129, 130, 0.9), rgba(241, 217, 138, 0.9)), url("/img/Layer 15.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .intro .intro-inner {
-  width: 100%;
-  max-width: 880px;
-  margin: 0 auto;
   text-align: center;
 }
 .intro .intro-inner .intro-subtitle {
-  margin-bottom: 20px;
-  font-family: "Kaushan", cursive;
+  padding-top: 168px;
+  padding-bottom: 67px;
+  font-family: "Kaushan Script", cursive;
   font-size: 72px;
   color: #fff;
   text-align: center;
@@ -45,12 +40,12 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   line-height: 1;
 }
-.intro .intro-inner .intro-title .intro-title::after {
+.intro .intro-inner .intro-title::after {
   content: "";
   display: block;
-  width: 60px;
-  height: 3px;
-  margin: 40px auto;
+  width: 6vw;
+  height: 0.3vh;
+  margin: 73px auto 52px auto;
   background-color: #fff;
 }
 
@@ -58,60 +53,90 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
   vertical-align: top;
   padding: 8px 30px;
+  margin-bottom: 156px;
   border: 3px solid #fff;
   font-size: 14px;
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
+  font-family: "Montserrat", sans-serif;
 }
 
 .header {
-  width: 100%;
-  padding-top: 30px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
+  font-size: 0;
+  overflow: hidden;
 }
 
 .header-inner {
+  margin: 0 auto;
+  box-sizing: border-box;
   width: 100%;
-  display: inline-block;
+  height: 66px;
 }
 .header-inner .header-logo {
-  text-align: center;
   display: inline-block;
-  width: 50%;
+  text-align: left;
+  padding-top: 30px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: relative;
+  left: 10%;
   font-size: 20px;
   font-family: "Montserrat", sans-serif;
   color: #fff;
   font-weight: bold;
 }
-
-/*nav*/
-.nav {
+.header-inner .nav {
+  text-align: right;
   vertical-align: top;
   display: inline-block;
-  width: 40%;
+  position: relative;
+  left: 45%;
+  z-index: 15;
   font-size: 14px;
-  text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  text-align: end;
 }
-.nav .nav-link {
+.header-inner .nav ul li {
+  text-align: right;
   display: inline-block;
-  vertical-align: top;
-  margin: 0 15px;
+  margin: 0;
+  padding: 0;
+  margin-left: 2.3vw;
+}
+.header-inner .nav ul li:hover {
   color: #fff;
   text-decoration: none;
+  border-bottom: 3px solid #fff;
+}
+.header-inner .nav .nav-link {
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 37px;
+  color: #fff;
+  text-decoration: none;
+  text-underline-offset: 5px;
   transition: color 0.2s linear;
 }
-.nav .nav-link:hover {
+.header-inner .nav img.shoping-cart {
+  color: #333333;
+}
+.header-inner .nav .last {
+  color: #333333;
+  padding-right: 0;
+  transition: color 0.2s linear;
+}
+.header-inner .nav .last:hover {
   color: #fce38a;
 }
-.nav .nav-link:after {
+.header-inner .nav .nav-link:hover {
+  color: #fce38a;
+  border-bottom: 2px;
+}
+.header-inner .nav .nav-link:after {
   content: "";
   display: inline-block;
   width: 100%;
@@ -121,38 +146,65 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
 }
 
+/*nav*/
 .slider {
+  font-size: 0;
+  box-sizing: border-box;
   display: inline-block;
   text-align: center;
   width: 100%;
-  margin-top: 30px;
 }
 .slider .slider-item {
   display: inline-block;
-  width: 23%;
+  width: 280px;
   opacity: 0.7;
+  margin-right: 20px;
+  text-align: center;
   font-size: 18px;
   color: #fff;
-  padding: 20px 0;
-  text-transform: uppercase;
+  padding-top: 28px;
+  padding-bottom: 28px;
   border-top: 3px solid #fff;
 }
 .slider .slider-item.active {
   opacity: 1;
+  -o-border-image: linear-gradient(to right, #f38181 25%, #fff 25%) 2;
+     border-image: linear-gradient(to right, #f38181 25%, #fff 25%) 2;
 }
-.slider .slider-item.active::before {
+
+.section {
+  font-size: 0;
+  box-sizing: border-box;
+  width: 100vw;
+}
+.section .container {
+  border: 1px solid red;
+}
+.section .section-header .sub-title {
+  text-align: center;
+  font-family: "Kaushan Script", cursive;
+  font-size: 24px;
+  color: #333333;
+  margin-top: 92px;
+  margin-bottom: 25px;
+}
+.section .section-header .title {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  color: #333333;
+}
+.section .section-header .title::after {
   content: "";
   display: block;
-  width: 70px;
-  height: 3px;
-  position: absolute;
-  top: 90.7%;
-  left: 3.3%;
-  z-index: 1;
+  width: 6vw;
+  height: 0.3vh;
+  margin: 42px auto 47px auto;
   background-color: #f38181;
 }
-.slider .slider-item.active::before .slider-number {
-  font-size: 24px;
-  font-family: "Montserrat", sans-serif;
-  color: #fff;
+.section .section-header .paragraph {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: #cccccc;
 }/*# sourceMappingURL=style.css.map */
