--- a/styles/style.scss
+++ b/styles/style.scss
@@ -221,7 +221,7 @@ body {
     border-image:   linear-gradient(to right, $pink 25%, $white 25%,) 2;
 }
 }
-
+//*section*//
 .section {
   font-size: 0;
   box-sizing: border-box;
