--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,11 +23,11 @@ $roboto: 'Roboto', sans-serif;
   padding: 0;
   border: 0;
 }
-body {
-  // padding-right: 5%;
-  // padding-left: 5%;
+// body {
+//   // padding-right: 5%;
+//   // padding-left: 5%;
   
-}
+// }
 
 .container1{
 //  width: 1200px;
@@ -229,6 +229,9 @@ body {
 
   .container {
     border: 1px solid red;
+    font-size: 0;
+    box-sizing: border-box;
+    
   }
 
   .section-header {
@@ -264,9 +267,36 @@ body {
     font-size: 15px;
     color: $light-gray;
   }
-  
+  .images-container {
+    max-width: 100%;
+    width: 90%;
+    border: 1px solid red;
+    box-sizing: border-box;
+    font-size: 0;
+    margin: 0 auto;
+    margin-top: 103px;
+    text-align: center;
+    
 
+    
   }
-}
- 
+  .img-responsive {
+    display: inline-block;
+    // max-width: 100%;
+    
+    height: auto;
+    text-align: center;
+    width: 380px;
+    margin: 0 31px 0 0;
+    vertical-align: top;
+
+    
+  }
   
+ 
+    
+  
+  }
+
+  
+}
