--- a/styles/style.css
+++ b/styles/style.css
@@ -65,13 +65,13 @@
 
 .header {
   font-size: 0;
-  overflow: hidden;
+  width: 100%;
 }
 
 .header-inner {
   margin: 0 auto;
   box-sizing: border-box;
-  width: 100%;
+  width: 100vw;
   height: 66px;
 }
 .header-inner .header-logo {
@@ -182,6 +182,9 @@
   font-size: 0;
   box-sizing: border-box;
 }
+.section .section-header {
+  width: 100%;
+}
 .section .section-header .sub-title {
   text-align: center;
   font-family: "Kaushan Script", cursive;
@@ -212,8 +215,7 @@
 }
 .section .section-header .images-container {
   max-width: 100%;
-  width: 90%;
-  border: 1px solid red;
+  width: 90vw;
   box-sizing: border-box;
   font-size: 0;
   margin: 0 auto;
@@ -224,7 +226,104 @@
   display: inline-block;
   height: auto;
   text-align: center;
-  width: 380px;
+  width: 19vw;
   margin: 0 31px 0 0;
   vertical-align: top;
+}
+.section .section-header .facts-container {
+  font-size: 0;
+  box-sizing: border-box;
+  background-color: #95e1d3;
+  border: 1px solid green;
+  display: inline-block;
+  margin-top: 11.67vh;
+  width: 100vw;
+}
+.section .section-header .facts-inner-container {
+  font-size: 0;
+  box-sizing: border-box;
+  width: 60%;
+  margin: 0 auto;
+}
+.section .section-header .number {
+  display: inline-block;
+  width: 20%;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  text-align: center;
+  padding-top: 89px;
+  padding-bottom: 89px;
+  border-right: 1px solid #b5eae0;
+}
+.section .section-header .number-line {
+  font-size: 72px;
+}
+.section .services-container {
+  font-size: 0;
+  box-sizing: border-box;
+  border: 1px solid green;
+  display: inline-block;
+  width: 100vw;
+}
+.section .services-container .services-subtitle {
+  font-size: 24px;
+  text-align: center;
+  font-family: "Kaushan Script", cursive;
+  margin-top: 11.67vh;
+  color: #333333;
+}
+.section .services-container .services-title {
+  font-size: 30px;
+  text-align: center;
+  color: #333333;
+  font-weight: bold;
+}
+.section .services-container .services-title::after {
+  content: "";
+  display: block;
+  width: 6vw;
+  height: 0.3vh;
+  margin: 42px auto 47px auto;
+  background-color: #f38181;
+}
+.section .services-container .services-inner-container {
+  width: 60%;
+  margin: 0 auto;
+  border: 1px solid orangered;
+}
+.section .services-container .service-section1 {
+  width: 100%;
+  border: 1px solid green;
+  text-align: center;
+}
+.section .services-container .service-section2 {
+  border: 1px solid rgb(128, 30, 0);
+  width: 100%;
+  text-align: center;
+}
+.section .services-container .item-h1 {
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  text-align: left;
+}
+.section .services-container .service-iteme {
+  width: 30%;
+  border: 1px solid red;
+  display: inline-block;
+  text-align: left;
+}
+.section .services-container .service-iteme .service-paragraph {
+  border: 1px solid red;
+  width: 100%;
+}
+.section .services-container .service-iteme p {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  color: #b2b2b2;
+}
+.section .services-container .service-iteme img {
+  display: inline-block;
+  border: 1px solid red;
 }/*# sourceMappingURL=style.css.map */
