--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@ $blue-lighten: #b5eae0;
 $gray: #f8f8f8;
 $gray-lighten: #b2b2b2;
 $light-gray: #cccccc;
+$lightes-gray: #e5e5e5;
 /*shrift*/
 $monserat:'Montserrat', sans-serif;
 $kaushan: 'Kaushan Script', cursive;
@@ -25,20 +26,14 @@ $roboto: 'Roboto', sans-serif;
   padding: 0;
   border: 0;
 }
-// body {
-//   // padding-right: 5%;
-//   // padding-left: 5%;
-  
-// }
+
 
 .container1{
-//  width: 1200px;
   margin: 0 auto;
 
 }
 /*container*/
 .container {
-  // width: 1200px;
   margin: 0 auto;
 
   
@@ -47,8 +42,6 @@ $roboto: 'Roboto', sans-serif;
 //*intro*//
 .intro {
   width: 100vw;
-  // max-width: 1920px;
-  // height: auto;
   background-image:
     linear-gradient(to bottom,rgba(232, 129, 130, 0.90), rgba(241, 217, 138, 0.90)),
     url('/img/Layer\ 15.jpg');
@@ -106,18 +99,16 @@ $roboto: 'Roboto', sans-serif;
 .header {
   font-size: 0;
   width: 100%;
-  // border: 1px solid red;
-  // width: 1920px;
-  // overflow: hidden;
+  
 } 
 
 .header-inner {
   margin: 0 auto;
   box-sizing: border-box;
-  // width: 100%;
+
   width: 100vw;
   height: 66px;
-  // display: inline-block;
+
 
   .header-logo {
     display: inline-block;
@@ -132,14 +123,12 @@ $roboto: 'Roboto', sans-serif;
     font-weight: bold;
   }
   .nav {
-    // width: 100vw;
     text-align: right;
     vertical-align: top;
     display: inline-block;
     position: relative;
     left: 45%;
     z-index: 15;
-    // width: 38.813rem;
     font-size: 14px;
     font-family: $monserat;
     font-weight: bold;
@@ -240,6 +229,9 @@ $roboto: 'Roboto', sans-serif;
     box-sizing: border-box;
     
   }
+
+
+
   //*about us*//
   .section-header {
     width: 100%;
@@ -294,12 +286,15 @@ $roboto: 'Roboto', sans-serif;
     margin: 0 31px 0 0;
     vertical-align: top;
   }
+
+
+
   //*facts*//
   .facts-container {
     font-size: 0;
     box-sizing: border-box;
     background-color: $light-blue;
-    border: 1px solid green;
+    // border: 1px solid green;
     display: inline-block;
     margin-top: 11.67vh;
     width: 100vw;
@@ -327,11 +322,15 @@ $roboto: 'Roboto', sans-serif;
 
 
   }
+
+
+
+
+
    //*services*//
   .services-container {
     font-size: 0;
     box-sizing: border-box;
-    border: 1px solid green;
     display: inline-block;
     width: 100vw;
     
@@ -368,23 +367,32 @@ $roboto: 'Roboto', sans-serif;
 
 
     .services-inner-container {
-      // font-size: 0;
-      // box-sizing: border-box;
       width: 60%;
       margin: 0 auto;
-      border: 1px solid orangered;
     }
+   
 
 
     .service-section1 {
       width: 100%;
-      border: 1px solid green;
       text-align: center;
+      border-bottom: 2px solid $lightes-gray;
+    }
+
+
+    .section-inner {
+      width: 100%;
+      margin-bottom: 30px;
+    }
+
+    .section-inner1 {
+      width: 100%;
+      margin-top: 30px;
+
     }
 
 
     .service-section2 {
-      border: 1px solid rgb(128, 30, 0);
       width: 100%;
       text-align: center;
     }
@@ -400,15 +408,12 @@ $roboto: 'Roboto', sans-serif;
 
 
     .service-iteme {
-      width: 30%;
-      border: 1px solid red;
+      width: 25%;
       display: inline-block;
       text-align: left;
 
       .service-paragraph {
-        border: 1px solid red;
         width: 100%;
-        // margin-left: 35px;
       }
 
 
@@ -418,18 +423,140 @@ $roboto: 'Roboto', sans-serif;
         font-family: $roboto;
         color: $gray-lighten;
        }
-       img {
-        display: inline-block;
-        border: 1px solid red;
-        
-        // padding-right: 30px;
-        // margin-right: 20px;
-       }
+       
       
     }
 
   }
+  .img {
+    margin-bottom: 20px;
+    padding-right: 10px;
+  }
+ 
+ 
+}
 
+   /*unique designer*/
+.feature-container {
+  background-image: linear-gradient(to bottom, rgba(239, 239, 239, 0.52), rgba(239, 239, 239, 0.73)),url(/img/mountain.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100vw;
+  height: auto;
+ 
+ .feature-display {
+  text-align: center;
+}
 
+.feature-subtitle {
+  padding-top: 109px;
+}
+
+.phone {
+  position: absolute;
+  left: 50%;
+  padding-top: 190px;
+  padding-left: 140px;
+ 
+}
 
 }
+
+//*service2*//
+.service2-container {
+  width: 100%;
+  border: 1px solid blue;
+  display: inline-block;
+
+  .service2-inner-container {
+    border: 1px solid blue;
+    width: 90%;
+    margin: 0 auto;
+    
+  }
+  .service-inner1 {
+    // display: inline-block;
+    width: 40%;
+
+  }
+
+  img {
+    border: 1px solid red;
+  }
+  .service2-inner2 {
+    display: inline-block;
+    border: 1px solid yellow;
+      display: inline-block;
+      width: 40%;
+  }
+  
+  .content {
+    width: 110px;
+  height: 110px;
+  overflow: auto;
+  }
+  }
+  // .accordion-title {
+  //   font-family: $roboto;
+  //   font-style: italic;
+  //   font-size: 15px;
+  // }
+   .accordion-container1 {
+    display: inline-block;
+    width: 50%;
+    }
+
+   
+    .accordion-title {
+      font-size: 15px;
+    }
+    .accordion-p {
+      font-size: 15px;
+    }
+
+    
+
+
+
+
+
+
+
+    #accordion li {
+      
+        list-style: none;
+        width: 30%;
+        margin-bottom: 10px;
+        padding: 10px;
+        border-radius: 4px;
+    }
+
+    #accordion li label {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    #accordion li label span {
+      transform: rotate(90deg);
+      font-size: 22px;
+      color: #333333;
+    }
+    #accordion label + input[type="radio"]{
+      display: none;
+    }
+    #accordion .content {
+      padding: 0 10px;
+      line-height: 26px;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s;
+    }
+    #accordion label + input[type="radio"]:checked + .content {
+      max-height: 500px;
+    }
+
+
